--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "18.3.1",
     "react-native": "0.75.2",
-    "react-native-bluetooth-serial-next": "^1.2.3"
+    "react-native-ble-plx": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
