--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.4.0",
     "react": "18.3.1",
     "react-native": "0.75.2",
-    "react-native-ble-manager": "^11.5.5"
+    "react-native-ble-manager": "^11.5.5",
+    "react-native-permissions": "^4.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
